adjust use of reflection to remove warning